--- a/cmd/comet/comet-example.toml
+++ b/cmd/comet/comet-example.toml
@@ -1,6 +1,6 @@
 # This is a TOML document. Boom
-[discovery]
-    nodes = ["discovery:7171"]
+[etcd]
+    endpoints = ["etcd0:2379"]
 
 [rpcServer]
     addr = ":3109"
