--- a/cmd/job/job-example.toml
+++ b/cmd/job/job-example.toml
@@ -1,6 +1,6 @@
 # This is a TOML document. Boom
-[discovery]
-    nodes = ["discovery:7171"]
+[etcd]
+    endpoints = ["etcd0:2379"]
 
 [kafka]
     topic = "goim-push-topic"
