--- a/cmd/logic/logic-example.toml
+++ b/cmd/logic/logic-example.toml
@@ -1,6 +1,6 @@
 # This is a TOML document. Boom
-[discovery]
-    nodes = ["discovery:7171"]
+[etcd]
+    endpoints = ["etcd0:2379"]
 
 [regions]
     "bj" = ["北京","天津","河北","山东","山西","内蒙古","辽宁","吉林","黑龙江","甘肃","宁夏","新疆"]
